fix spacing on mobile right column

--- a/raw/scss/_layout.scss
+++ b/raw/scss/_layout.scss
@@ -102,7 +102,7 @@ nav.mobile-nav {
   @include outer-container;
   padding: 3em 0;
   @include media($mobile) {
-    padding: 0;
+    padding: 0 0 3em 0;
   }
   .main-left {
     @include span-columns(8);
@@ -121,6 +121,8 @@ nav.mobile-nav {
     }
     @include media($mobile) {
       @include span-columns(12);
+      padding: 0 1em;
+      margin-top: 2em;
     }
   }
 }
